--- a/config.yml
+++ b/config.yml
@@ -164,10 +164,10 @@ params:
         #- name: Rss
         #  url: "index.xml"
 
-    # editPost:
-    #     URL: "https://github.com/adityatelange/hugo-PaperMod/tree/exampleSite/content"
-    #     Text: "Suggest Changes" # edit text
-    #     appendFilePath: true # to append file path to Edit link
+    editPost:
+        URL: "https://github.com/OldTyT/oldtyt.xyz/blob/master/content"
+        Text: "Suggest Changes"
+        appendFilePath: true
 
     # label:
     #     text: "Home"
@@ -180,7 +180,7 @@ params:
 
     assets:
         disableHLJS: true
-    #     favicon: "<link / abs url>"
+        favicon: "https://upload.wikimedia.org/wikipedia/en/9/9a/Trollface_non-free.png"
     #     favicon16x16: "<link / abs url>"
     #     favicon32x32: "<link / abs url>"
     #     apple_touch_icon: "<link / abs url>"
