fix: setup disableSpecial1stPost is true

--- a/config.yml
+++ b/config.yml
@@ -99,6 +99,7 @@ params:
     # disableThemeToggle: true
     ShowShareButtons: true
     ShowReadingTime: true
+    disableSpecial1stPost: true
     displayFullLangName: true
     ShowPostNavLinks: true
     ShowBreadCrumbs: true
