--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,31 @@
 ---
-image:
-  name: registry.gitlab.com/pages/hugo:0.120.4
-  entrypoint: [""]
+stages:
+  - linting
+  - spelling_check
+  - deploy
 
 variables:
   GIT_DEPTH: 0
   GIT_STRATEGY: clone
   GIT_SUBMODULE_STRATEGY: recursive
 
+yamllint:
+  stage: linting
+  image: registry.gitlab.com/pipeline-components/yamllint:0.31.0
+  script:
+    - yamllint .
+
+spell_check:
+  stage: spelling_check
+  image: ghcr.io/oldtyt/docker-cspell
+  script:
+    - cspell "**.md"
+
 pages:
   stage: "deploy"
+  image:
+    name: registry.gitlab.com/pages/hugo:0.120.4
+    entrypoint: [""]
   script:
     - apk add --no-cache brotli
     - hugo --gc --minify --destination=public --baseURL=$BASEURL  --environment $ENV
@@ -22,10 +38,13 @@ pages:
     path_prefix: "$PAGES_PREFIX"
   artifacts:
     paths:
-    - public
+      - public
   variables:
     BASEURL: "https://${DOMAIN}/${PAGES_PREFIX}"
     PAGES_PREFIX: ""
+  needs:
+    - yamllint
+    - spell_check
   rules:
     - if: $CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH
       when: manual
