--- a/config.yml
+++ b/config.yml
@@ -1,7 +1,7 @@
+---
 title: OldTyT
 paginate: 5
 theme: hugo-papermod
-
 enableInlineShortcodes: true
 enableRobotsTXT: true
 buildDrafts: false
@@ -9,172 +9,145 @@ buildFuture: false
 buildExpired: false
 enableEmoji: true
 pygmentsUseClasses: true
-# googleAnalytics: UA-123-45  # Deprecated Universal Analytics
-
 minify:
-    disableXML: true
-    minifyOutput: true
-
+  disableXML: true
+  minifyOutput: true
 languages:
-    en:
-        languageName: "English 🇺🇸"
-        weight: 1
-        taxonomies:
-          category: categories
-          tag: tags
-          series: series
-        params:
-          languageAltTitle: English
-          profileMode:
-              enabled: true
-              title: OldTyT
-              imageUrl: "https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png"
-              imageTitle: OldTyT
-              subtitle: "🌋 Work hard | 🎮 Play hard"
-        menu:
-            main:
-                - name: CV
-                  url: cv
-                  weight: 3
-                - name: Posts
-                  url: posts
-                  weight: 6
-                - name: Search
-                  url: search
-                  weight: 8
-                - name: Donate
-                  url: donate
-                  weight: 9
-    ru:
-        languageName: "Russian 🇷🇺"
-        weight: 1
-        taxonomies:
-          category: categories
-          tag: tags
-          series: series
-        params:
-          languageAltTitle: Russian
-          profileMode:
-              enabled: true
-              title: OldTyT
-              imageUrl: "https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png"
-              imageTitle: OldTyT
-              subtitle: "🌋 Work hard | 🎮 Play hard"
-        menu:
-            main:
-                - name: Резюме
-                  url: cv
-                  weight: 3
-                - name: Посты
-                  url: posts
-                  weight: 6
-                - name: Поиск
-                  url: search
-                  weight: 8
-                - name: Донат
-                  url: donate
-                  weight: 9
-outputs:
-    home:
-        - HTML
-        - RSS
-        - JSON
-
-params:
-    icon: "https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png"
-    #env: production
-    description: "Personal website OldTyT"
-    author: OldTyT
-    # author: ["Me", "You"] # multiple authors
-
-    defaultTheme: auto
-    # disableThemeToggle: true
-    ShowShareButtons: true
-    ShowReadingTime: true
-    disableSpecial1stPost: true
-    displayFullLangName: true
-    ShowPostNavLinks: true
-    ShowBreadCrumbs: true
-    ShowCodeCopyButtons: true
-    ShowRssButtonInSectionTermList: true
-    ShowToc: true
-    # comments: false
-    images: ["papermod-cover.png"]
-
-    profileMode:
+  en:
+    languageName: "English 🇺🇸"
+    weight: 1
+    taxonomies:
+      category: categories
+      tag: tags
+      series: series
+    params:
+      languageAltTitle: English
+      profileMode:
         enabled: true
         title: OldTyT
-        imageUrl: "#"
-        imageTitle: My avatar
-        # imageWidth: 120
-        # imageHeight: 120
-        buttons:
-            - name: Archives
-              url: archives
-            - name: Tags
-              url: tags
-
-    socialIcons:
-        - name: github
-          url: "https://github.com/OldTyT"
-        - name: gitlab
-          url: "https://gitlab.com/OldTyT"
-        - name: telegram
-          url: "https://arasaka_2077.t.me"
-        - name: "telegram chat"
-          url: "https://t.me/oldi_na_meste"
-
-    editPost:
-        URL: "https://gitlab.com/OldTyT/oldtyt.xyz/blob/master/content"
-        Text: "Suggest Changes"
-        appendFilePath: true
-
-    analytics:
-        google:
-            SiteVerificationTag: "G-2Q1PY6PFPY"
-
-    assets:
-        disableHLJS: true
-        favicon: "https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png"
-        apple_touch_icon: "https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png"
-        safari_pinned_tab: "https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png"
-
-    cover:
-      linkFullImages: true
-      responsiveImages: true
-
+        imageUrl: 'https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png'
+        imageTitle: OldTyT
+        subtitle: "🌋 Work hard | 🎮 Play hard"
+    menu:
+      main:
+        - name: CV
+          url: cv
+          weight: 3
+        - name: Posts
+          url: posts
+          weight: 6
+        - name: Search
+          url: search
+          weight: 8
+        - name: Donate
+          url: donate
+          weight: 9
+  ru:
+    languageName: "Russian 🇷🇺"
+    weight: 1
+    taxonomies:
+      category: categories
+      tag: tags
+      series: series
+    params:
+      languageAltTitle: Russian
+      profileMode:
+        enabled: true
+        title: OldTyT
+        imageUrl: 'https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png'
+        imageTitle: OldTyT
+        subtitle: "🌋 Work hard | 🎮 Play hard"
+    menu:
+      main:
+        - name: Резюме
+          url: cv
+          weight: 3
+        - name: Посты
+          url: posts
+          weight: 6
+        - name: Поиск
+          url: search
+          weight: 8
+        - name: Донат
+          url: donate
+          weight: 9
+outputs:
+  home:
+    - HTML
+    - RSS
+    - JSON
+params:
+  icon: 'https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png'
+  description: Personal website OldTyT
+  author: OldTyT
+  defaultTheme: auto
+  ShowShareButtons: true
+  ShowReadingTime: true
+  disableSpecial1stPost: true
+  displayFullLangName: true
+  ShowPostNavLinks: true
+  ShowBreadCrumbs: true
+  ShowCodeCopyButtons: true
+  ShowRssButtonInSectionTermList: true
+  ShowToc: true
+  images:
+    - papermod-cover.png
+  profileMode:
+    enabled: true
+    title: OldTyT
+    imageUrl: '#'
+    imageTitle: My avatar
+    buttons:
+      - name: Archives
+        url: archives
+      - name: Tags
+        url: tags
+  socialIcons:
+    - name: github
+      url: 'https://github.com/OldTyT'
+    - name: gitlab
+      url: 'https://gitlab.com/OldTyT'
+    - name: telegram
+      url: 'https://arasaka_2077.t.me'
+    - name: telegram chat
+      url: 'https://t.me/oldi_na_meste'
+  editPost:
+    URL: 'https://gitlab.com/OldTyT/oldtyt.xyz/blob/master/content'
+    Text: Suggest Changes
+    appendFilePath: true
+  analytics:
+    google:
+      SiteVerificationTag: G-2Q1PY6PFPY
+  assets:
+    disableHLJS: true
+    favicon: 'https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png'
+    apple_touch_icon: 'https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png'
+    safari_pinned_tab: 'https://gitlab.com/uploads/-/system/user/avatar/9780123/avatar.png'
+  cover:
+    linkFullImages: true
+    responsiveImages: true
 markup:
-    goldmark:
-        renderer:
-            unsafe: true
-    highlight:
-        noClasses: false
-        # anchorLineNos: true
-        # codeFences: true
-        # guessSyntax: true
-        # lineNos: true
-        # style: monokai
-
+  goldmark:
+    renderer:
+      unsafe: true
+  highlight:
+    noClasses: false
 privacy:
-    vimeo:
-        disabled: false
-        simple: true
-
-    twitter:
-        disabled: false
-        enableDNT: true
-        simple: true
-
-    instagram:
-        disabled: false
-        simple: true
-
-    youtube:
-        disabled: false
-        privacyEnhanced: true
-
+  vimeo:
+    disabled: false
+    simple: true
+  twitter:
+    disabled: false
+    enableDNT: true
+    simple: true
+  instagram:
+    disabled: false
+    simple: true
+  youtube:
+    disabled: false
+    privacyEnhanced: true
 services:
-    instagram:
-        disableInlineCSS: true
-    twitter:
-        disableInlineCSS: true
+  instagram:
+    disableInlineCSS: true
+  twitter:
+    disableInlineCSS: true
