--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ pages:
   image:
     name: registry.gitlab.com/pages/hugo:0.120.4
     entrypoint: [""]
+  only: [master]
   script:
     - apk add --no-cache brotli
     - echo "BASEURL=$BASEURL, ENV=$ENV"
@@ -39,33 +40,14 @@ pages:
     - find public -type f -regex '.*\.\(css\|html\|js\|txt\|xml\)$' -exec gzip -f -k {} \;
     - find public -type f -regex '.*\.\(css\|html\|js\|txt\|xml\)$' -exec brotli -f -k {} \;
   environment:
-    name: "Pages ${PAGES_PREFIX}. Env - ${ENV}"
-    url: "https://${DOMAIN}/${PAGES_PREFIX}"
-  pages:
-    path_prefix: "$PAGES_PREFIX"
+    name: "Pages oldtyt.xyz"
+    url: "https://oldtyt.xyz"
   artifacts:
     paths:
       - public
   variables:
-    BASEURL: "https://${DOMAIN}/${PAGES_PREFIX}"
-    PAGES_PREFIX: ""
+    BASEURL: "https://oldtyt.xyz"
   needs:
     - yamllint
     - spell_check
     # - markdownlint
-  rules:
-    - if: $CI_COMMIT_BRANCH == "master"
-      when: manual
-      variables:
-        DOMAIN: oldtyt.xyz
-        ENV: production
-    - if: $CI_COMMIT_BRANCH == "development"
-      variables:
-        DOMAIN: dev.oldtyt.xyz
-        ENV: development
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
-      when: manual
-      variables:
-        DOMAIN: dev.oldtyt.xyz
-        ENV: development
-        PAGES_PREFIX: 'mr$CI_MERGE_REQUEST_IID'
