chore: added ENV

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,7 @@ pages:
       - public
   variables:
     BASEURL: "https://oldtyt.xyz"
+    ENV: production
   needs:
     - yamllint
     - spell_check
