chore: delete personal tg link

--- a/config.yml
+++ b/config.yml
@@ -82,6 +82,7 @@ params:
   author: OldTyT
   defaultTheme: auto
   ShowShareButtons: true
+  ShareButtons: ["x", "telegram"]
   ShowReadingTime: true
   disableSpecial1stPost: true
   displayFullLangName: true
@@ -108,8 +109,6 @@ params:
     - name: gitlab
       url: 'https://gitlab.com/OldTyT'
     - name: telegram
-      url: 'https://arasaka_2077.t.me'
-    - name: telegram chat
       url: 'https://t.me/oldi_na_meste'
   editPost:
     URL: 'https://gitlab.com/OldTyT/oldtyt.xyz/blob/master/content'
