--- a/config.yml
+++ b/config.yml
@@ -39,9 +39,6 @@ languages:
         - name: Search
           url: search
           weight: 8
-        - name: Donate
-          url: donate
-          weight: 9
   ru:
     languageName: "Russian 🇷🇺"
     weight: 1
@@ -68,9 +65,6 @@ languages:
         - name: Поиск
           url: search
           weight: 8
-        - name: Донат
-          url: donate
-          weight: 9
 outputs:
   home:
     - HTML
@@ -99,13 +93,11 @@ params:
     imageUrl: '#'
     imageTitle: My avatar
     buttons:
-      - name: Archives
-        url: archives
-      - name: Tags
-        url: tags
+      - name: "Подписаться"
+        url: "https://t.me/oldi_na_meste"
   socialIcons:
     - name: telegram
-      url: 'https://t.me/oldi_na_meste'
+      url: 'https://arasaka_2077.t.me'
     - name: github
       url: 'https://github.com/OldTyT'
     - name: gitlab
